--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Long Haul
+title: eureka!
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-url: https://long-haul.netlify.app
+url: https://hyorok4487.github.io
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
