--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ navigation:
     url: /contact
 
 social:
-  github: brianmaierjr
-  twitter: brianmaierjr
-  facebook: brianmaierjr
+  github: hyorok4487
+  twitter: _HelloWorld_p
+  facebook: hyorok4487
   email: hyorok1234@naver.com
-  linkedin: brianmaierjr
+  #linkedin: brianmaierjr
 
 google_analytics: "UA-58263416-1"
 
