--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,11 @@ social:
   #linkedin: brianmaierjr
 
 analytics:
-  provider        : "google"
+  provider        : "google-gtag"
 
   google:
     tracking_id   : "G-Y88N8KV4RM"
+    measurement_id: "G-Y88N8KV4RM"
     anonymize_ip  : #false
 
 
